# fdep-mcp-server

./: .env.example  .gitignore  README.md  pyproject.toml
fdep_mcp/: __init__.py  config.py  server.py
scripts/: import_fdep.py
